<resources>
    <string name="app_name">EventSports</string>
    <!-- LOGIN -->
    <string name="login_texto">Iniciar Sesión</string>
    <string name="login_email_hint">Email</string>
    <string name="login_password_hint">Contraseña</string>
    <string name="forgot_password">¿Olvidaste tu Contraseña?</string>
    <string name="login">Entrar</string>
    <string name="new_user_register_now">Registrate ahora</string>
    <string name="use_other_methods">Otros Metodos</string>
    <!-- SIGNUP -->
    <string name="sign_up">Registrate</string>
    <string name="usurname">Usuario</string>
    <string name="confirm_password">Confirmar Contraseña</string>
    <string name="log_in_now">Inicia Sesión</string>
    <!-- FORGOTPASSWD -->
    <string name="has_olvidado_tu_contrase_a">¿Olvidaste tu Contraseña?</string>
    <string name="texto_forgotpasswd">Escribe tu Email y te llegara un correo con tu nueva contraseña.</string>
    <string name="enviar">Enviar</string>
    <!-- MAIN -->
    <string name="main">Deportes</string>
    <string name="otros">Otros</string>
    <string name="deporte_del_dia">Deporte del dia</string>
    <!-- PROFILE -->
    <string name="profile">Perfil</string>
    <string name="actividades_apuntadas">Actividades Apuntadas</string>
    <string name="publicaciones">Publicaciones</string>
    <!-- NEW EVENT -->
    <string name="new_event">Nuevo Evento o Clase</string>
    <string name="escoge_una_imagen_para_su_evento">Escoja una imagen para su Evento/Clase:</string>
    <string name="datos">DATOS</string>
    <string name="t_tulo">Título</string>
    <string name="direcci_n">Dirección</string>
    <string name="descripci_n">Descripción</string>
    <string name="n">Nº</string>
    <string name="tipo_clase_evento">Tipo(Clase/Evento)</string>
    <string name="crear">Crear</string>
    <string name="localidad">Localidad</string>
    <string name="evento">Evento</string>
    <string name="clase">Clase</string>
    <string name="deporte_event">Deporte</string>
    <!-- REGISTER ALERT -->
    <string name="login_Phone_Number_hint">Teléfono</string>
    <string name="login_Phone_Number_txt">Teléfono:</string>
    <string name="login_Profile_Photo">Foto</string>
    <string name="login_Profile_Photo_txt">Escoja una Foto:</string>
    <string name="save">Save</string>
    <string name="introduce_imagen_de_perfil_y_telefono_para_comenzar">Introduce imagen de perfil y telefono para comenzar</string>
    <!-- BOTTON NAV -->
    <string name="home">Home</string>
    <string name="mapa">Mapa</string>
    <string name="nuevo_evento">Nuevo Evento o Clase</string>
    <string name="comunidad">Comunidad</string>
    <string name="perfil">Perfil</string>
    <string name="title_activity_maps">Map</string>
    <!-- EVENTS PROFILE -->
    <string name="deporte">Deporte:</string>
    <string name="direcci_n2">Dirección:</string>
    <string name="descripci_n2">Descripción:</string>
    <string name="coordinador">Coordinador:</string>
    <string name="metodo_de_pago">Metodo de Pago:</string>
    <string name="chat">Chat</string>
    <string name="apuntate">Apuntate</string>
    <string name="tarjeta">Tarjeta:</string>
    <string name="tarjeta2">Tarjeta</string>
    <string name="efectivo">Efectivo</string>
    <string name="ver_en_el_mapa"><![CDATA[Ver en el mapa -->]]></string>
    <!--strings of the activity_settings -->
    <!--account -->
    <string name="account">Cuenta</string>
    <string name="change_personal_info">Cambiar información personal</string>
    <string name="change_email">Cambiar Email</string>
    <string name="lenguage">Idioma</string>
    <!--permission -->
    <string name="permission">Permisos</string>
    <string name="notification">Permitir Notificaciones</string>
    <string name="acces_contact">Acceso a Contactos</string>
    <string name="localization">Permitir Ubicación</string>
    <string name="message">Permitir Mensajes de Otros</string>
    <!--others -->
    <string name="others">Otros</string>
    <string name="privacity">Politica de Privacidad</string>
    <string name="contact">Contacto</string>
    <string name="about_us">Sobre Nosotros</string>
    <string name="log_out">Cerrar Sesion</string>
    !-- Personal Info-->
    <string name="personal_info">Cambiar Contraseña</string>

    <!--field strings  of the activity_change_password-->
    <string name="field_old_password">Old Password:</string>
    <string name="field_new_password">New Password:</string>
    <string name="field_repeat_password">Repeat Password:</string>

    <!--strings of the activity_change_email-->
    <string name="title_change_personal_info">Change Personal Information</string>
    <string name="email_address">E-mail Address</string>
    <string name="phone_number">Phone Number</string>
    <string name="gender">Gender</string>
    <string name="birthday">Birthday</string>

    <!--strings of the activity_contact -->
    <string name="title_numero">Este es nuestro número de teléfono:</string>
    <string name="numero">69439226</string>
    <string name="title_email">Puedes enviarnos un E-mail:</string>
    <string name="email">eventsports@gmail.com</string>
    <string name="title_redes_sociales">Nuestras redes sociales:</string>
    <string name="redes_sociales_insta">eventSports</string>
    <string name="title_activity_settings">SettingsActivity</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails</string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
</resources>