<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home"
        android:title="@string/home" />
    <item
        android:id="@+id/navigation_maps"
        android:icon="@drawable/ic_maps"
        android:title="@string/mapa" />
    <item
        android:id="@+id/navigation_new_event"
        android:icon="@drawable/ic_add"
        android:title="@string/nuevo_evento" />
    <item
        android:id="@+id/navigation_community"
        android:icon="@drawable/ic_community"
        android:title="@string/comunidad" />
    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/ic_profile"
        android:title="@string/perfil" />

</menu>