<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".splash_login_register.ActivityForgotPassword">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="470dp"
            android:orientation="vertical"
            tools:layout_editor_absoluteY="100dp">

            <ImageView
                android:id="@+id/img_lock"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:layout_marginTop="30dp"
                app:srcCompat="@drawable/logo" />

            <TextView
                android:id="@+id/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/has_olvidado_tu_contrase_a"
                android:textAlignment="center"
                android:textColor="@android:color/black"
                android:textSize="25sp" />

            <TextView
                android:id="@+id/text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="25dp"
                android:text="@string/texto_forgotpasswd"
                android:textColor="@android:color/black"
                android:textSize="15sp" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/emailForgot"
                style="@style/parent"
                android:layout_marginTop="@dimen/loginViewsMargin"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="30dp"
                app:startIconDrawable="@drawable/ic_email"
                android:textColorHint="@color/azul_medio"
                app:hintTextColor="@color/azul_medio"
                app:errorEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    style="@style/modifiedEditText"
                    android:hint="@string/login_email_hint"
                    android:inputType="textEmailAddress"
                    android:maxLines="1" />

            </com.google.android.material.textfield.TextInputLayout>
            <br.com.simplepass.loading_button_lib.customViews.CircularProgressButton
                android:id="@+id/btn_send_email_recovery"
                style="@style/loginButton"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/loginViewsMargin"
                android:layout_marginBottom="30dp"
                android:text="@string/enviar"
                app:initialCornerAngle="27dp"
                app:spinning_bar_color="#FFF"
                app:spinning_bar_padding="6dp"
                app:spinning_bar_width="4dp" />

        </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>